@@ -440,11 +440,11 @@
         <Parameter Name="points" Type="Gdk.Point[]" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Draws a Polygon connecting a set of points.</summary>
         <param name="gc">a <see cref="T:Gdk.GC" /></param>
         <param name="filled">a <see cref="T:System.Int32" /></param>
         <param name="points">a <see cref="T:Gdk.Point[]" /></param>
-        <remarks>To be added</remarks>
+        <remarks>This method is obsolete.  Use the overload which takes a <see cref="T:System.Boolean" /> for <paramref name='filled'/></remarks>
       </Docs>
     </Member>
     <Member MemberName="DrawRectangle">
@@ -798,6 +798,26 @@
         <param name="xdith">a <see cref="T:System.Int32" /></param>
         <param name="ydith">a <see cref="T:System.Int32" /></param>
         <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="DrawPolygon">
+      <MemberSignature Language="C#" Value="public void DrawPolygon (Gdk.GC gc, bool filled, Gdk.Point[] points);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="gc" Type="Gdk.GC" />
+        <Parameter Name="filled" Type="System.Boolean" />
+        <Parameter Name="points" Type="Gdk.Point[]" />
+      </Parameters>
+      <Docs>
+        <summary>Draws a Polygon connecting a set of points.</summary>
+        <param name="gc">a <see cref="T:Gdk.GC" /></param>
+        <param name="filled">a <see cref="T:System.Boolean" /></param>
+        <param name="points">a <see cref="T:Gdk.Point" /></param>
+        <remarks>
+        </remarks>
       </Docs>
     </Member>
   </Members>
