@@ -1,3 +1,7 @@
+2004-08-24  Mike Kestner  <mkestner@ximian.com>
+
+	* en/Gdk/Drawable.xml : add DrawPolygon overload and doc both.
+
 2004-08-22  Shane Landrum <epicene@pobox.com>
 
 	* en/Gtk/RowActivatedArgs.xml
