@@ -1,3 +1,9 @@
+2004-08-24  Mike Kestner  <mkestner@ximian.com>
+
+	* gdk/Drawable.custom : add a DrawPolygon overload with bool filled
+	and mark the old int filled overload Obsolete.
+	[Fixes #60702]
+
 2004-08-20  Mike Kestner  <mkestner@ximian.com>
 
 	* atk/Atk.metadata : mark an array param on Relation ctor.
